# agentic-rag-real-estate

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: 3.0_commit_all.md  3.1_merge_feature_main.md  4.0_kill_servers.md  6.1_py_task_standard.md  6.2_ts_task_standard.md  7.1_py_task_agent_team.md  7.2_ts_task_agent_team.md  8.0_skriv_standard.md  8.1_translate_to_english.md  8.2_rett.md
api/: dependencies.py  main.py
api/routers/: _ablation_categorize.py  _ablation_evaluation.py  _experiments_helpers.py  ablation.py  analysis.py  categorization.py  documents.py  experiments.py
data/: ablation_study_results.json  risk_categories.json
data/ablation_evaluations/: d001.json  d002.json  d003.json  d004.json  d005.json  d006.json  d007.json  d008.json  d009.json  d010.json  (+10 more)
frontend/: package-lock.json  package.json
scripts/: _start_debug.py  batch_analyze.py  cleanup_remaining_markdown_artifacts.py  compute_f1_per_category.py  count_escapes.py  count_words.py  find_backslashes.py  fix_escaped_parens.py  fix_escaped_periods.py  fix_escaped_underscores.py  fix_remaining_escapes.py  run_ablation.py  run_agentic_rag.py  run_comparison.py  run_standard_rag.py  start.py  strip_markdown.py  strip_pandoc_anchors.py  strip_remaining_headers.py  unwrap_vis_markers.py
src/: config.py
tests/: conftest.py  test_agentic_rag.py  test_api.py  test_config.py  test_document_processing.py  test_evaluate_comparison.py  test_evaluation.py  test_retrieval.py  test_schemas.py  test_standard_rag.py  test_utils.py
(+1766 files in other folders)
