[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-real-estate"
version = "0.1.0"
description = "Agentic RAG for Norwegian Real Estate Document Analysis"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "voyageai>=0.3.0",
    "chromadb>=0.5.0",
    "pdfplumber>=0.11.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
run-standard = "scripts.run_standard_rag:main"
run-agentic = "scripts.run_agentic_rag:main"
run-comparison = "scripts.run_comparison:main"
run-ablation = "scripts.run_ablation:main"
start = "scripts.start:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "scripts*"]
